--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "assets-webpack-plugin": "^3.4.0",
     "bootstrap": "^4.0.0-alpha.5",
     "bootstrap-loader": "^1.3.0",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "http-server": "^0.9.0",
@@ -94,6 +95,7 @@
     "reflect-metadata": "^0.1.9",
     "rxjs": "~5.0.2",
     "tether": "^1.4.0",
+    "web-animations-js": "^2.2.2",
     "zone.js": "~0.7.4"
   },
   "devDependencies": {
