--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.2",
     "@angularclass/hmr-loader": "~3.0.2",
+    "angular2-markdown": "^1.3.4",
     "assets-webpack-plugin": "^3.4.0",
     "bootstrap": "^4.0.0-alpha.5",
     "bootstrap-loader": "^1.3.0",
