--- a/package.json
+++ b/package.json
@@ -69,22 +69,22 @@
     "webpack": "webpack"
   },
   "dependencies": {
-    "@angular/common": "~2.4.1",
-    "@angular/compiler": "~2.4.1",
-    "@angular/core": "~2.4.1",
-    "@angular/forms": "~2.4.1",
-    "@angular/http": "~2.4.1",
+    "@angular/common": "^2.4.4",
+    "@angular/compiler": "^2.4.4",
+    "@angular/core": "^2.4.4",
+    "@angular/forms": "^2.4.4",
+    "@angular/http": "^2.4.4",
     "@angular/material": "^2.0.0-beta.1",
-    "@angular/platform-browser": "~2.4.1",
-    "@angular/platform-browser-dynamic": "~2.4.1",
-    "@angular/platform-server": "~2.4.1",
-    "@angular/router": "~3.4.1",
+    "@angular/platform-browser": "^2.4.4",
+    "@angular/platform-browser-dynamic": "^2.4.4",
+    "@angular/platform-server": "^2.4.4",
+    "@angular/router": "^3.4.4",
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.2",
     "@angularclass/hmr-loader": "~3.0.2",
     "angular2-markdown": "^1.3.4",
     "assets-webpack-plugin": "^3.4.0",
-    "bootstrap": "^4.0.0-alpha.5",
+    "bootstrap": "4.0.0-alpha.5",
     "bootstrap-loader": "^1.3.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
@@ -100,7 +100,7 @@
     "zone.js": "~0.7.4"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "~2.4.1",
+    "@angular/compiler-cli": "^2.4.4",
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.2.34",
     "@types/node": "^6.0.38",
