--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "assets-webpack-plugin": "^3.4.0",
     "bootstrap": "4.0.0-alpha.5",
     "bootstrap-loader": "^1.3.0",
+    "chart.js": "^2.4.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
@@ -93,6 +94,7 @@
     "ie-shim": "^0.1.0",
     "jquery": "^3.1.1",
     "ng2-bootstrap": "^1.1.16-10",
+    "ng2-charts": "^1.5.0",
     "reflect-metadata": "^0.1.9",
     "rxjs": "~5.0.2",
     "tether": "^1.4.0",
