--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "jquery": "^3.1.1",
+    "ng2-awesome-disqus": "^1.0.3",
     "ng2-bootstrap": "^1.1.16-10",
     "ng2-charts": "^1.5.0",
     "reflect-metadata": "^0.1.9",
@@ -152,7 +153,7 @@
     "tslint": "~3.15.1",
     "tslint-loader": "^2.1.5",
     "typedoc": "^0.5.0",
-    "typescript": "2.0.10",
+    "typescript": "^2.1.5",
     "url-loader": "^0.5.7",
     "v8-lazy-parse-webpack-plugin": "^0.3.0",
     "webpack": "2.2.0-rc.2",
