--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "ie-shim": "^0.1.0",
     "jquery": "^3.1.1",
     "ng2-awesome-disqus": "^1.0.3",
-    "ng2-bootstrap": "^1.1.16-10",
+    "ng2-bootstrap": "1.3.0",
     "ng2-charts": "^1.5.0",
     "reflect-metadata": "^0.1.9",
     "rxjs": "~5.0.2",
